Changes since 0.2.8.3_beta1:
- Made ready for Armatrators
- Authentication routines now use utf8 as forward- compatibility with
  trunk. Previously, non-ASCII usernames simply didn't work at all.
- Better lag slide protection: clients no longer get confused when
  the server sends their cycle back in time, and the server no longer
  does that for old clients.
- Fixed rare wallpassing bug; it required what whould usually be an
  instakill and infinte wall length.

Changes since 0.2.8.2:

  New settings and commands:
- MIN_PLAY_TIME_*: minimal play time required before you are allowed to
  play on this server.
- SPAM_AUTOKICK_COUNT: minimal number of spam warning messages you get in a
  row before you get kicked.
- FORTRESS_COLLAPSE_SPEED: tune the collapse speed of fortress zones.
- VOTE_KICK_REASON: default reason given on kick votes.
- "/vote" chat interface to votes; "/vote kick <player>" issues a kick vote.
- new vote type "/vote suspend <player>" suspends a player for 
  VOTING_SUSPEND_ROUNDS rounds.
- new vote type "/vote include <file>", includes configuration file
  vote/<file>.
- new vote type "/vote command <command>" executes console command
  <command>. (Both that and /vote include are by default only available
  to moderators).
- VOTING_HARM_TIME: time between all harmful votes against a player
- VOTING_KICK_MINHARM: auto-transform the first few menu issued kick 
  votes to suspensions
- (UN)SUSPEND kicks a player to spectator mode with a timeout. Intended to
  let new players watch before they play.
- VOTES_CANCEL cancels all running polls.
- VOTING_SUSPEND [<minutes>] disallows voting during a specified amount of time.
- ZONE_ALPHA_TOGGLE to override the systemwide alpha blendings setting and
  have zones rendered in wireframe mode even when alpha blending is on.
- ZONE_ALPHA(_SERVER) to control intensity of zone rendering.
- SCORE_HOLE for awarding sacrifice.
- SCORE_SURVIVE for player survival and FORTRESS_HELD_SCORE for not losing